<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="GetDeviceDataSteps" Id="{7e389f72-6520-46e6-89b4-6fcc0f3eacb7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
TYPE GetDeviceDataSteps :
(
	Begin,
  FetchDeviceTypes,
  ResetId1,
  GetDeviceNames,
  ResetId2,
  GetDeviceNetIds,
  End
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>